ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonarqube
            port: 
              number: 80
    host: dev-sonarqube.pubcon.signetic.com
  tls:
  - hosts:
    - dev-sonarqube.pubcon.signetic.com
    secretName: example-app-tls
